<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="How To Play TimeFighter"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:text="@string/tfHowTo" />

    <Button
        android:id="@+id/continueTF_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/continueToGame" />

    <Button
        android:id="@+id/returnTF_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainmenu"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>